// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pageHeader > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`pageHeader > renders with class correctly 1`] = `
"<div data-slot="root" class="py-12">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with default slot correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->Default slot
  </div>
</div>"
`;

exports[`pageHeader > renders with description correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="description" class="">Description</div>
  </div>
</div>"
`;

exports[`pageHeader > renders with description slot correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="description" class="">Description slot</div>
  </div>
</div>"
`;

exports[`pageHeader > renders with headline correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="headline" class="">Headline</div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with headline slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="headline" class="">Headline slot</div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with links correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="links" class=""><button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><span data-slot="label" class="">GitHub</span>
          <!--v-if-->
        </button></div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with links slot correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="links" class="">Links slot</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with title correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <h1 data-slot="title" class="">Title</h1>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with title slot correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <h1 data-slot="title" class="">Title slot</h1>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with ui correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="py-12">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;
